--- a/frontend-nannyway/public/index.html
+++ b/frontend-nannyway/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>nannyway</title>
+    <title>nannyway - der digitiale KTP-Planer</title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
