--- a/frontend-nannyway/public/index.html
+++ b/frontend-nannyway/public/index.html
@@ -2,14 +2,14 @@
 <html lang="de">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon_32.ico"/>
+    <link rel="icon" href="%PUBLIC_URL%/2nwfavicon32.ico"/>
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
     <meta name="theme-color" content="#000000"/>
     <meta
             name="nannyway"
             content="Der digitale Planer für Tagespflegepersonen"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/nwfavicon32.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/2nwfavicon32.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
